Fixed bug display on smaller devices

--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -38,7 +38,6 @@
     align-items: center;
     border-radius: 1rem;
     margin-bottom: 3rem;
-    transform: translateY(-8rem);
 }
 
 @media (max-width: 1261px){
